--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="/static/css/game.css">
+    <link rel="icon" type="image/png" href="/static/favicon.png">
 </head>
 
 <body>
